<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_label"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_label"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courseLabel"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/name_label"
        app:layout_constraintStart_toStartOf="@+id/course_select"
        app:layout_constraintTop_toTopOf="@+id/name_label" />

    <Spinner
        android:id="@+id/course_select"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/course_label"
        app:layout_constraintStart_toEndOf="@+id/course_label"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/score_label"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_result" />

    <EditText
        android:id="@+id/editScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:ems="10"
        android:hint="@string/editScore"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_label" />

    <Button
        android:id="@+id/grade_button"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gradeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editScore" />

    <TextView
        android:id="@+id/grade_result"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="Grade : ?"
        app:layout_constraintBottom_toBottomOf="@+id/editScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editScore"
        app:layout_constraintTop_toTopOf="@+id/editScore" />

    <TextView
        android:id="@+id/course_result"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_label" />

</androidx.constraintlayout.widget.ConstraintLayout>